--- a/Weekly-Schedule/index.html
+++ b/Weekly-Schedule/index.html
@@ -72,7 +72,7 @@
                     <input type="text" class="form-control" id="highlight-nico" placeholder="妮酷">
                 </div>
                 <div class="col">
-                    <input type="text" class="form-control" id="default-nico" value="原創曲準備中" placeholder="妮酷的預設節目">
+                    <input type="text" class="form-control" id="default-nico" value="周周有SHORTS" placeholder="妮酷的預設節目">
                 </div>
             </div>
             <div class="row mb-3">
