--- a/lightstick/index.html
+++ b/lightstick/index.html
@@ -55,7 +55,7 @@
         #lightStick {
             width: 200px;
             height: 80vh;
-            background-image: url('https://i.postimg.cc/bZVHKbBM/light-Stick.png');
+            background-image: url('http://img.dreamcity.studio/vtuber/0509.png');
             background-size: contain;
             background-repeat: no-repeat;
             position: fixed;
