--- a/Weekly-Schedule/index.html
+++ b/Weekly-Schedule/index.html
@@ -80,7 +80,7 @@
                     <input type="text" class="form-control" id="highlight-cb" placeholder="CB">
                 </div>
                 <div class="col">
-                    <input type="text" class="form-control" id="default-cb" value="BB在工作" placeholder="CB的預設節目">
+                    <input type="text" class="form-control" id="default-cb" value="BB出差中" placeholder="CB的預設節目">
                 </div>
             </div>
             <div class="row mb-3">
